--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
 .content-box {
     box-sizing: border-box;
     border: 1px solid #f1f1f1;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    padding: 10px;
     max-height: 100%;
-    max-width: 100%;
+    /* max-width: 100%; */
     overflow: auto;
 }
